Update contact information to use app store support systems

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -80,7 +80,7 @@
     <p>We may update this Privacy Policy from time to time. We will notify you of any material changes by posting the new Privacy Policy in the Game.</p>
 
     <h2>11. Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at: [YOUR_EMAIL_ADDRESS]</p>
+    <p>If you have any questions about this Privacy Policy, please contact us through the App Store or Google Play Store review and support systems where you downloaded the game.</p>
 
     <h2>12. International Users</h2>
     <p>This Game is intended for users worldwide. By using the Game, you consent to the collection and use of information as described in this policy.</p>
