--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -53,6 +53,6 @@
     <p>We may terminate your access to the Game at any time without notice if you violate these terms.</p>
 
     <h2>12. Contact Information</h2>
-    <p>For questions about these Terms of Use, please contact us at: [YOUR_EMAIL_ADDRESS]</p>
+    <p>For questions about these Terms of Use, please contact us through the App Store or Google Play Store review and support systems where you downloaded the game.</p>
 </body>
 </html>
