Update game name and contact details
- Changed game name from PopIt Challenge to Pop Tap Challenge
- Updated email from vitekvorona@gmail.com to voronaapps@gmail.com
- Updated level count from 50 to 40 levels
- Simplified game description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PopIt Challenge - Support</title>
+    <title>Pop Tap Challenge - Support</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -38,20 +38,19 @@
 </head>
 <body>
     <div class="header">
-        <h1>🎯 PopIt Challenge</h1>
+        <h1>🎯 Pop Tap Challenge</h1>
         <p>Support Page</p>
     </div>
 
     <div class="section">
         <h2>About the Game</h2>
-        <p>PopIt Challenge is a fast-paced mobile game that tests your reflexes. Tap the green circles before time runs out and progress through 50 increasingly challenging levels!</p>
+        <p>Pop Tap Challenge is a fast-paced mobile game that tests your reflexes. Tap the circles before time runs out and progress through 40 increasingly challenging levels!</p>
     </div>
 
     <div class="section contact-info">
         <h2>Contact & Support</h2>
         <p><strong>Need help or have feedback?</strong></p>
-        <p>📧 Email: <a href="mailto:vitekvorona@gmail.com">vitekvorona@gmail.com</a></p>
-        <p>🕐 Response time: Usually within 24 hours</p>
+        <p>📧 Email: <a href="mailto:voronaapps@gmail.com">voronaapps@gmail.com</a></p>
         
         <p><strong>When contacting us, please include:</strong></p>
         <ul>
